// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser Modifiers Tests > Parse Definition with Modifier 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 19,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": {
        "FullStart": 1,
        "Kind": 104,
        "Leading": [],
        "Length": 1,
        "Start": 1,
        "Text": "#",
        "Trailing": [],
      },
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 10,
            "Text": "MyReport",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 2,
            "Text": "Report",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 19,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 1,
      "Kind": 104,
      "Leading": [],
      "Length": 1,
      "Start": 1,
      "Text": "#",
      "Trailing": [],
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 2,
      "Text": "Report",
      "Trailing": [],
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 10,
      "Text": "MyReport",
      "Trailing": [],
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [],
    },
    {
      "FullStart": 19,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 19,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;

exports[`Parser Modifiers Tests > Parse Definition with Optional Modifier 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 16,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 16,
        "Text": "]",
        "Trailing": [],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 7,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 7,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 8,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 8,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 17,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": {
        "FullStart": 1,
        "Kind": 102,
        "Leading": [],
        "Length": 1,
        "Start": 1,
        "Text": "!",
        "Trailing": [],
      },
      "name": {
        "end": 16,
        "isIncomplete": false,
        "kind": 3,
        "start": 9,
        "text": "MyField",
        "tokens": [
          {
            "FullStart": 9,
            "Kind": 600,
            "Leading": [],
            "Length": 7,
            "Start": 9,
            "Text": "MyField",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 7,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Field",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 5,
            "Start": 2,
            "Text": "Field",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 17,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 1,
      "Kind": 102,
      "Leading": [],
      "Length": 1,
      "Start": 1,
      "Text": "!",
      "Trailing": [],
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 2,
      "Text": "Field",
      "Trailing": [],
    },
    {
      "FullStart": 7,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 7,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 8,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 8,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 9,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 9,
      "Text": "MyField",
      "Trailing": [],
    },
    {
      "FullStart": 16,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 16,
      "Text": "]",
      "Trailing": [],
    },
    {
      "FullStart": 17,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 17,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;
